--- a/root/css/styleMobile.css
+++ b/root/css/styleMobile.css
@@ -119,3 +119,17 @@ body {
     line-height: 28px;
     color: rgba(255, 255, 255, 1); 
 }
+
+.titleContainer {
+    background-color: rgba(139, 72, 191, 0.3);
+    border-radius: 30px 0 0 30px;
+}
+
+.cardNumber {
+    width: 70px;
+    height: 43px;
+    padding: 10 25 10 25;
+    border-radius: 30px;
+    text-align: center;
+    background-color: #8b48bf;
+}
