--- a/root/css/styleMobile.css
+++ b/root/css/styleMobile.css
@@ -194,12 +194,45 @@ body {
     font-weight: 500;
     padding-bottom: 45px;
     color: rgba(185, 185, 193, 1);
+}
+
+#card2, #card3 {
+    display: none;
+}
 
 
+/* lower section quote */
 
+.lowerQuoteSection {
+    align-items: center;
+    /* height: 366px; */
+    background-color: rgba(60, 221, 243, 1);
+    padding-left: 80px;
+    padding-right: 80px;
+}
 
+.lowerQuoteTitle {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    color: rgba(255, 255, 255, 1);
+    text-align: center;
+    letter-spacing: -0.005em;
+}
+
+.quoteButton {
+    width: 134px;
+    height: 44px;
+    padding: 10px;
+    border-radius: 50px;
+    background-color: rgba(35, 44, 80, 1);
+    color: rgba(255, 255, 255, 1) ;
+    border: none;
+    box-shadow: 0px, 4px, 8px, rgba(0,  0, 0, 0.25);
+    margin-bottom: 40px;
 
 
 }
 
 
+/* FOOTER SECTION STYLES */
