--- a/root/css/styleMobile.css
+++ b/root/css/styleMobile.css
@@ -20,7 +20,6 @@ body {
     width: 480px;
     margin: 0;
     padding: 0;
-    border: 1px solid pink;
     }
 
 .flexCol {
@@ -38,7 +37,6 @@ body {
 }
 
 .headerContainer {
-    border: 1px solid green;
     width: 100%;
     height: 10vh;
     justify-content: space-between;
@@ -58,14 +56,12 @@ body {
 
 
 #padelPlayer {
-    border: 1px solid blue;
     width: 90%;
 
 }
 
 .padelIntro {
     width: 90%;
-    border:1px solid red;
     text-align: right;
 }
 
@@ -241,8 +237,10 @@ body {
 
 footer {
     align-items: center;
+    justify-content: center;
     background-color:rgba(30, 30, 38, 1);
 }
+
 .goBtn {
     width: 63px;
     height: 42px;
@@ -251,20 +249,46 @@ footer {
     font-size: 14px;
     border: none;
     color:#FFFFFF;
-
-
-
 }
+
 .footerInputContainer {
-    margin: 10px 10px;
-
+    margin: 52px 10px 20px 10px;
 }
-
 
 .footerInput {
     width: 308px;
+    padding-left: 10px;
     border-radius: 50px;
     margin-right: 10px;
+    font-size: 13px;
+    color:  rgba(160, 160, 160, 1);
+    
+}
+
+.footerLinks {
+    width: 100%;
+    padding-left: 40px;
+    margin-bottom: 20px;
+}
+
+.footerLinksList {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.footerLink {
+    list-style: none;
+    margin-top: 10px;
+}
+
+.footerA {
+    padding-bottom: 12px;
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 400;
+    color:#FFFFFF;
 }
 
 .footerImages {
@@ -272,17 +296,23 @@ footer {
 }
 
 .iconContainer {
-    margin: 0;
+    margin: 30px 0px;
     width: 480px;
-    border: 1px solid red;
     justify-content: space-around;
+}
+
+.icon {
+    width: 20px;
 }
 .footerLogo {
     width: 100px;
     color: #FAFAFA;
+    margin-bottom: 30px;
 }
 
 .copyrigth {
+   
+    height: 70px;
     font-size: 13px;
     font-weight: 500;
     line-height: 18px;
