--- a/root/css/styleMobile.css
+++ b/root/css/styleMobile.css
@@ -168,7 +168,7 @@ body {
 }
 
 .bestTitle {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     font-size: 40px;
     font-weight: 700;
     color: rgba(36, 46, 83, 1);
@@ -197,6 +197,9 @@ body {
     display: none;
 }
 
+.moreBtn {
+    margin: 50px 0px 50px 0px;
+}
 
 /* lower section quote */
 
@@ -416,12 +419,14 @@ footer {
     /* LIST SECTION */
     
     .listSection {
+        margin-top: 0px;
         padding-top: 0;
         width: 100%;
         background-color: rgba(250,  250, 250, 1);
     }
     
     #cardList {
+        margin-top: 0px;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
@@ -449,46 +454,18 @@ footer {
     
     /* best section */
     
-    .bestSection {
-        text-align: center;
-        align-items: center;
-    }
-    
-
     .cardContainer {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
+        margin-bottom: 50px;
     }
+    
     .bestCard {
-        width: 445px;
-        height: 219px;
-        /* background-color: #FAFAFA; */
-        background-color: #afa;
-        justify-content: center;
-        align-items: center;
-        margin: 0 5px 50px 5px;
+        background-color: rgba(250,  250, 250, 1);
+        margin: 0 5px 0px 5px;
     }
     
-    .bestTitle {
-        margin-bottom: 80px;
-        font-size: 40px;
-        font-weight: 700;
-        color: rgba(36, 46, 83, 1);
-    }
-    
-
-  
-    
-    .bestCardDescription {
-        font-size: 16px;
-        font-weight: 500;
-        padding-bottom: 45px;
-        color: rgba(185, 185, 193, 1);
-    }
-    
-
-
     #card2, #card3 {
         display: flex;
     }
@@ -497,34 +474,24 @@ footer {
     /* lower section quote */
     
     .lowerQuoteSection {
+        flex-direction: row;
         align-items: center;
-        /* height: 366px; */
-        background-color: rgba(60, 221, 243, 1);
-        padding-left: 80px;
-        padding-right: 80px;
+        justify-content: space-between;
+        background-color: rgba(139, 72, 191, 1);
     }
     
     .lowerQuoteTitle {
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 48px;
-        color: rgba(255, 255, 255, 1);
-        text-align: center;
-        letter-spacing: -0.005em;
+        width: 40%;
+        padding-left: 40px;
+        text-align: left;
     }
     
     .quoteButton {
-        width: 134px;
-        height: 44px;
-        padding: 10px;
-        border-radius: 50px;
-        background-color: rgba(35, 44, 80, 1);
-        color: rgba(255, 255, 255, 1) ;
-        border: none;
+        background-color: rgba(255, 255, 255, 1);
+        color: rgba(139, 72, 191, 1);
         box-shadow: 0px, 4px, 8px, rgba(0,  0, 0, 0.25);
-        margin-bottom: 40px;
-    
-    
+        margin-bottom: 0;
+        margin-right: 130px;
     }
     
     
@@ -532,43 +499,44 @@ footer {
     
     
     
-    footer {
-        align-items: center;
-        justify-content: center;
-        background-color:rgba(30, 30, 38, 1);
+    #footerContainer {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        padding-top: 52PX;
     }
     
-    .goBtn {
-        width: 63px;
-        height: 42px;
-        background-color: rgba(139, 72, 191, 1);
-        border-radius: 50px;
-        font-size: 14px;
-        border: none;
-        color:#FFFFFF;
+    .footerImages {
+        margin-left: 110px;
+        width: 20%;
+        flex-direction: column-reverse;
+        align-items: flex-start;
     }
     
-    .footerInputContainer {
-        margin: 52px 10px 20px 10px;
+    .footerLogo {
+        width: 120px;
+        margin-bottom: 70px;
     }
     
-    .footerInput {
-        width: 308px;
-        padding-left: 10px;
-        border-radius: 50px;
-        margin-right: 10px;
-        font-size: 13px;
-        color:  rgba(160, 160, 160, 1);
+    .iconContainer {
+        margin-top: 0px;
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    
+    .footerLinks {
+        margin-top: 0px;
+        width: 60%;
+        padding-left: 80px;
+        padding-right: 30px;
         
     }
     
-    .footerLinks {
-        width: 100%;
-        padding-left: 40px;
-        margin-bottom: 20px;
-    }
     
     .footerLinksList {
+        margin-top: 0px;
         width: 50%;
         display: flex;
         flex-direction: column;
@@ -576,51 +544,32 @@ footer {
     }
     
     .footerLink {
-        list-style: none;
-        margin-top: 10px;
+        margin-top: 0px;
+        padding-top: 12px;
+    }
+  
+    /* INPUT CONTINER */
+    .footerInputContainer {
+        margin: 0px;
+        margin-right: 170px;
     }
     
-    .footerA {
-        padding-bottom: 12px;
-        text-decoration: none;
-        font-size: 16px;
-        font-weight: 400;
-        color:#FFFFFF;
+    .footerInput {
+        width: 201px;
     }
-    
-    .footerImages {
-        align-items: center;
-    }
-    
-    .iconContainer {
-        margin: 30px 0px;
-        width: 480px;
-        justify-content: space-around;
-    }
-    
-    .icon {
-        width: 20px;
-    }
-    .footerLogo {
-        width: 100px;
-        color: #FAFAFA;
-        margin-bottom: 30px;
-    }
+   
     
     .copyrigth {
-       
-        height: 70px;
+        height: 50px;
         font-size: 13px;
         font-weight: 500;
         line-height: 18px;
         color: rgba(140, 140, 148, 1);
-    
     }
 
 
-
-
-
-
+    .moreBtn {
+        margin: 50px 0px 50px 0px;
+    }
 
 }
