--- a/root/css/style.css
+++ b/root/css/style.css
@@ -89,6 +89,7 @@ body {
 /*  QUOTE SECTION */
 
 .quoteSection {
+    margin-bottom: 25px;
     width: 100%;
     padding: 40px 20px 40px 20px;
     text-align: left;
@@ -257,6 +258,7 @@ footer {
 
 .footerInputContainer {
     margin: 52px 10px 20px 10px;
+    padding-left: 15px;
 }
 
 .footerInput {
@@ -268,7 +270,8 @@ footer {
 
 .footerInput::placeholder {
     padding-left: 10px;
-    color:  rgba(160, 160, 160, 1);  
+    color:  rgba(160, 160, 160, 1); 
+     
 }
 
 
@@ -503,6 +506,8 @@ footer {
         margin-bottom: 0;
         margin-right: 130px;
     }
+
+
     
     /* FOOTER SECTION STYLES */
     
